@@ -4,7 +4,10 @@
  */
 package com.artipie.conda;
 
+import com.adobe.testing.s3mock.junit5.S3MockExtension;
+import com.amazonaws.services.s3.AmazonS3;
 import com.amihaiemil.eoyaml.Yaml;
+import com.artipie.asto.Key;
 import com.artipie.asto.Storage;
 import com.artipie.asto.factory.Config;
 import com.artipie.asto.factory.StoragesLoader;
@@ -23,6 +26,7 @@ import org.hamcrest.text.StringContainsInOrder;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.testcontainers.Testcontainers;
@@ -30,10 +34,10 @@ import org.testcontainers.containers.Container;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.wait.strategy.AbstractWaitStrategy;
 import org.testcontainers.containers.wait.strategy.WaitStrategy;
-import org.testcontainers.images.builder.ImageFromDockerfile;
 
 import java.util.Optional;
 import java.util.Queue;
+import java.util.UUID;
 import java.util.concurrent.ConcurrentLinkedDeque;
 
 /**
@@ -41,15 +45,15 @@ import java.util.concurrent.ConcurrentLinkedDeque;
  */
 public final class CondaSliceS3ITCase {
 
-    /**
-     * MinIO S3 storage server port.
-     */
-    private static final int S3_PORT = 9000;
+    @RegisterExtension
+    static final S3MockExtension MOCK = S3MockExtension.builder()
+        .withSecureConnection(false)
+        .build();
 
     /**
-     * Curl exit code when resource not retrieved and `--fail` is used, http 400+.
+     * S3 storage server port.
      */
-    private static final int CURL_NOT_FOUND = 22;
+    private static final int S3_PORT = 9000;
 
     /**
      * Exit code template for matching.
@@ -57,7 +61,7 @@ public final class CondaSliceS3ITCase {
     private static final String EXIT_CODE_FMT = "Container.ExecResult(exitCode=%d,";
 
     /**
-     * Don't wait for minIO port on start.
+     * Don't wait for S3 port on start.
      */
     private static final WaitStrategy DONT_WAIT_PORT = new AbstractWaitStrategy() {
         @Override
@@ -82,85 +86,59 @@ public final class CondaSliceS3ITCase {
     private GenericContainer<?> cntn;
 
     /**
+     * Bucket to use in tests.
+     */
+    private String bucket;
+
+    /**
+     * Artipie Storage instance for tests.
+     */
+    private Storage storage;
+
+    /**
      * Application port.
      */
     private int port;
 
     @BeforeEach
-    void initialize() throws Exception {
-        this.port = RandomFreePort.get();
-        final Queue<ArtifactEvent> events = new ConcurrentLinkedDeque<>();
-        final String url = String.format("http://host.testcontainers.internal:%d", this.port);
-        Testcontainers.exposeHostPorts(this.port);
-        this.cntn = new GenericContainer<>(
-            new ImageFromDockerfile(
-                "local/conda-adapter/conda_slice_s3_itcase", false
-            ).withDockerfileFromBuilder(
-                builder -> builder
-                    .from("continuumio/miniconda3:4.10.3")
-                    .env("DEBIAN_FRONTEND", "noninteractive")
-                    .run("apt update -y -o APT::Update::Error-Mode=any")
-                    .run("apt dist-upgrade -y && apt install -y curl netcat")
-                    .run("apt autoremove -y && apt clean -y && rm -rfv /var/lib/apt/lists")
-                    .run("apt install -y curl && apt clean && rm -rfv /var/lib/apt/lists")
-                    .run("conda install -vv -y conda-build==3.27.0 conda-verify==3.4.2 anaconda-client==1.10.0 2>&1|tee /tmp/conda.log")
-                    .run("conda clean -a")
-                    .run(String.format("echo -e 'channels:\\n  - %s' > /root/.condarc", url))
-                    .run(String.format("anaconda config --set url %s/ -s", url))
-                    .run("conda config --set anaconda_upload yes")
-                    .copy("minio-bin-20231120.txz", "/w/minio-bin-20231120.txz")
-                    .run("tar xf /w/minio-bin-20231120.txz -C /root")
-                    .run(
-                        String.join(
-                            ";",
-                            "sh -c '/root/bin/minio server /var/minio > /tmp/minio.log 2>&1 &'",
-                            "timeout 30 sh -c 'until nc -z localhost 9000; do sleep 0.1; done'",
-                            "/root/bin/mc alias set srv1 http://localhost:9000 minioadmin minioadmin 2>&1 |tee /tmp/mc.log",
-                            "/root/bin/mc mb srv1/buck1 --region s3test 2>&1|tee -a /tmp/mc.log",
-                            "/root/bin/mc anonymous set public srv1/buck1 2>&1|tee -a /tmp/mc.log"
-                        )
-                    )
-                    .run("rm -fv /w/minio-bin-20231120.txz /tmp/*.log")
-                    .copy("snappy-1.1.3-0.tar.bz2", "/w/snappy-1.1.3-0.tar.bz2")
-                    .copy("noarch_glom-22.1.0.tar.bz2", "/w/noarch_glom-22.1.0.tar.bz2")
-                    .copy("linux-64_nng-1.4.0.tar.bz2", "/w/linux-64_nng-1.4.0.tar.bz2")
-                )
-                .withFileFromClasspath("snappy-1.1.3-0.tar.bz2", "snappy-1.1.3-0.tar.bz2")
-                .withFileFromClasspath("noarch_glom-22.1.0.tar.bz2", "noarch_glom-22.1.0.tar.bz2")
-                .withFileFromClasspath("linux-64_nng-1.4.0.tar.bz2", "linux-64_nng-1.4.0.tar.bz2")
-                .withFileFromClasspath("minio-bin-20231120.txz", "minio-bin-20231120.txz")
-        )
-        .withExposedPorts(CondaSliceS3ITCase.S3_PORT)
-        .waitingFor(CondaSliceS3ITCase.DONT_WAIT_PORT)
-        .withCommand("tail", "-f", "/dev/null")
-        .withWorkingDirectory("/home/");
-        this.cntn.start();
-        final int minioport = this.cntn.getMappedPort(9000);
-        final Storage storage = StoragesLoader.STORAGES
+    void initialize(final AmazonS3 client) throws Exception {
+        this.bucket = UUID.randomUUID().toString();
+        client.createBucket(this.bucket);
+        this.storage = StoragesLoader.STORAGES
             .newObject(
                 "s3",
                 new Config.YamlStorageConfig(
                     Yaml.createYamlMappingBuilder()
-                        .add("region", "s3test")
-                        .add("bucket", "buck1")
-                        .add("endpoint", String.format("http://localhost:%d", minioport))
+                        .add("region", "us-east-1")
+                        .add("bucket", this.bucket)
+                        .add("endpoint", String.format("http://localhost:%d", MOCK.getHttpPort()))
                         .add(
                             "credentials",
                             Yaml.createYamlMappingBuilder()
                                 .add("type", "basic")
-                                .add("accessKeyId", "minioadmin")
-                                .add("secretAccessKey", "minioadmin")
+                                .add("accessKeyId", "foo")
+                                .add("secretAccessKey", "bar")
                                 .build()
                         )
                         .build()
                 )
             );
+        this.port = RandomFreePort.get();
+        final Queue<ArtifactEvent> events = new ConcurrentLinkedDeque<>();
+        final String url = String.format("http://host.testcontainers.internal:%d", this.port);
+        Testcontainers.exposeHostPorts(this.port);
+        this.cntn = new GenericContainer<>("artipie/conda-tests:1.0")
+        .withExposedPorts(CondaSliceS3ITCase.S3_PORT)
+        .waitingFor(CondaSliceS3ITCase.DONT_WAIT_PORT)
+        .withCommand("tail", "-f", "/dev/null")
+        .withWorkingDirectory("/w/adapter/example-project");
+        this.cntn.start();
         this.server = new VertxSliceServer(
             CondaSliceS3ITCase.VERTX,
             new LoggingSlice(
                 new BodyLoggingSlice(
                     new CondaSlice(
-                        storage, Policy.FREE,
+                        this.storage, Policy.FREE,
                         (username, password) -> Optional.of(AuthUser.ANONYMOUS),
                         new TestCondaTokens(), url, "*", Optional.of(events)
                     )
@@ -170,13 +148,13 @@ public final class CondaSliceS3ITCase {
         );
         this.server.start();
         MatcherAssert.assertThat(
-            "Failed to start Minio",
-            this.exec("bash", "-c", "nohup /root/bin/minio server /var/minio 2>&1|tee /tmp/minio.log &"),
+            "Failed to update /root/.condarc",
+            this.exec("sh", "-c", String.format("echo -e 'channels:\\n  - %s' > /root/.condarc", url)),
             this.exitCodeStrMatcher(0)
         );
         MatcherAssert.assertThat(
-            "Failed to wait for Minio",
-            this.exec("timeout", "30",  "sh", "-c", "until nc -z localhost 9000; do sleep 0.1; done"),
+            "Failed to set anaconda url",
+            this.exec(String.format("anaconda config --set url %s/ -s", url).split(" ")),
             this.exitCodeStrMatcher(0)
         );
         MatcherAssert.assertThat(
@@ -199,15 +177,15 @@ public final class CondaSliceS3ITCase {
     })
     void canSingleUploadToArtipie(final String pkgname, final String pkgpath, final String pkgarch)
         throws Exception {
-        MatcherAssert.assertThat(
-            "repodata.json must be absent in S3 before test",
-            this.exec(String.format("curl -f -kv http://localhost:9000/buck1/%s/repodata.json", pkgarch).split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
-        );
+        final Key pkgKey = new Key.From("%s/%s".formatted(pkgarch, pkgname));
+        final Key repodata = new Key.From("%s/repodata.json".formatted(pkgarch));
         MatcherAssert.assertThat(
             String.format("%s must be absent in S3 before test", pkgname),
-            this.exec(String.format("curl -f -kv http://localhost:9000/buck1/%s/%s", pkgarch, pkgname).split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            !this.storage.exists(pkgKey).get()
+        );
+        MatcherAssert.assertThat(
+            "repodata.json must be absent in S3 before test",
+            !this.storage.exists(repodata).get()
         );
         MatcherAssert.assertThat(
             "Package was not uploaded successfully",
@@ -222,14 +200,12 @@ public final class CondaSliceS3ITCase {
             )
         );
         MatcherAssert.assertThat(
-            "repodata.json must exist in S3 storage after test",
-            this.exec(String.format("curl -f -kv http://localhost:9000/buck1/%s/repodata.json", pkgarch).split(" ")),
-            this.exitCodeStrMatcher(0)
+            String.format("%s must exist in S3 after test", pkgname),
+            this.storage.exists(pkgKey).get()
         );
         MatcherAssert.assertThat(
-            String.format("%s/%s must exist in S3 storage after test", pkgarch, pkgname),
-            this.exec(String.format("curl -f -kv http://localhost:9000/buck1/%s/%s", pkgarch, pkgname).split(" ")),
-            this.exitCodeStrMatcher(0)
+            "repodata.json must exist in S3 after test",
+            this.storage.exists(repodata).get()
         );
     }
 
@@ -237,23 +213,19 @@ public final class CondaSliceS3ITCase {
     void canMultiUploadDifferentArchTest() throws Exception {
         MatcherAssert.assertThat(
             "linux-64/snappy-1.1.3-0.tar.bz2 must be absent in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/snappy-1.1.3-0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            !this.storage.exists(new Key.From("linux-64/snappy-1.1.3-0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
             "noarch_glom-22.1.0.tar.bz2 must be absent in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/noarch/noarch_glom-22.1.0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            !this.storage.exists(new Key.From("noarch/noarch_glom-22.1.0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
             "noarch/repodata.json must be absent in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/noarch/repodata.json".split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            !this.storage.exists(new Key.From("noarch/repodata.json")).get()
         );
         MatcherAssert.assertThat(
             "linux-64/repodata.json must be absent in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/repodata.json".split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            !this.storage.exists(new Key.From("linux-64/repodata.json")).get()
         );
         MatcherAssert.assertThat(
             "Package was not uploaded successfully",
@@ -281,23 +253,19 @@ public final class CondaSliceS3ITCase {
         );
         MatcherAssert.assertThat(
             "linux-64/snappy-1.1.3-0.tar.bz2 must exist in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/snappy-1.1.3-0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(0)
+            this.storage.exists(new Key.From("linux-64/snappy-1.1.3-0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
             "noarch_glom-22.1.0.tar.bz2 must exist in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/noarch/noarch_glom-22.1.0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(0)
+            this.storage.exists(new Key.From("noarch/noarch_glom-22.1.0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
             "noarch/repodata.json must exist in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/noarch/repodata.json".split(" ")),
-            this.exitCodeStrMatcher(0)
+            this.storage.exists(new Key.From("noarch/repodata.json")).get()
         );
         MatcherAssert.assertThat(
             "linux-64/repodata.json must exist in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/repodata.json".split(" ")),
-            this.exitCodeStrMatcher(0)
+            this.storage.exists(new Key.From("linux-64/repodata.json")).get()
         );
     }
 
@@ -305,18 +273,15 @@ public final class CondaSliceS3ITCase {
     void canMultiUploadSameArchTest() throws Exception {
         MatcherAssert.assertThat(
             "linux-64/snappy-1.1.3-0.tar.bz2 must be absent in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/snappy-1.1.3-0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            !this.storage.exists(new Key.From("linux-64/snappy-1.1.3-0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
             "linux-64/linux-64_nng-1.4.0.tar.bz2 must be absent in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/linux-64_nng-1.4.0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            !this.storage.exists(new Key.From("linux-64/linux-64_nng-1.4.0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
-            "linux-64/linux-64_nng-1.4.0.tar.bz2 must be absent in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/repodata.json".split(" ")),
-            this.exitCodeStrMatcher(CondaSliceS3ITCase.CURL_NOT_FOUND)
+            "linux-64/repodata.json must be absent in S3 before test",
+            !this.storage.exists(new Key.From("linux-64/repodata.json")).get()
         );
         MatcherAssert.assertThat(
             "Package was not uploaded successfully",
@@ -344,18 +309,15 @@ public final class CondaSliceS3ITCase {
         );
         MatcherAssert.assertThat(
             "linux-64/snappy-1.1.3-0.tar.bz2 must exist in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/snappy-1.1.3-0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(0)
+            this.storage.exists(new Key.From("linux-64/snappy-1.1.3-0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
             "linux-64/linux-64_nng-1.4.0.tar.bz2 must exist in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/linux-64_nng-1.4.0.tar.bz2".split(" ")),
-            this.exitCodeStrMatcher(0)
+            this.storage.exists(new Key.From("linux-64/linux-64_nng-1.4.0.tar.bz2")).get()
         );
         MatcherAssert.assertThat(
-            "linux-64/linux-64_nng-1.4.0.tar.bz2 must exist in S3 before test",
-            this.exec("curl -f -kv http://localhost:9000/buck1/linux-64/repodata.json".split(" ")),
-            this.exitCodeStrMatcher(0)
+            "linux-64/repodata.json must exist in S3 before test",
+            this.storage.exists(new Key.From("linux-64/repodata.json")).get()
         );
     }
 
